trunk/OldArchive/062411044ddedca3bafb27b20798ae47-803889f054654ad4b92ce24ea171578e/output
+ g++ -O2 -Wall -pedantic -pthread -std=c++11 main.cpp
main.cpp: In function ‘int main()’:
main.cpp:7:23: error: expected primary-expression before ‘ss’
     std::stringstream ss;
                       ^
main.cpp:7:23: error: expected ‘;’ before ‘ss’
main.cpp:10:5: error: ‘ss’ was not declared in this scope
     ss.rdbuf()->pubsetbuf(buf, sizeof buf);
     ^
